<resources>
    <string name="app_name">BeCitizeN</string>
    <string name="facebook_app_id">1386882294791151</string>
    <string name="backendClientID">857901571463-rhtuk6e89trutq00m185t2fm5assha08.apps.googleusercontent.com</string>
    <string name="login">Login</string>
    <string name="login_cancel">Login was cancelled</string>
    <string name="login_fail">Login failed</string>
    <string name="youAreIn">You are in!</string>
    <string name="logout">Logout</string>
    <string name="errorUserNotFound">User not found</string>
    <string name="errorIncorrPassw">Wrong password</string>
    <string name="enter">Enter</string>
    <string name="logoutMsg">Do you really want to exit BeCitizeN?</string>
    <string name="logInMail">Log in with email</string>
    <string name="logInGuest">Log in as a guest</string>
    <string name="signUpMail">Sign up with email</string>
    <string name="signUpTitle">Sign up</string>
    <string name="enterEmail">Enter your email</string>
    <string name="enterEmailUsername">Enter your email or username</string>
    <string name="enterPassw">Enter your password</string>
    <string name="repeatPassw">Repeat your password</string>
    <string name="Accept">Accept</string>
    <string name="errorPasswlenght">Password too short, 6 characters at least</string>
    <string name="errorPassw">Passwords do not match</string>
    <string name="errorMail">Mail already registered</string>
    <string name="checkInfo">Check your information</string>
    <string name="username">Username</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="birthDate">Birth Date</string>
    <string name="biography">Biography</string>
    <string name="country">Birth Country</string>
    <string name="submit">Submit</string>
    <string name="errorMsgName">Not a valid input</string>
    <string name="errorUsername">Username already exists</string>
    <string name="errorBiography">Biography too long</string>
    <string name="pickImage">Pick your image</string>
    <string-array name="countries" translatable="false">
        <item>Afghanistan</item>
        <item>Albania</item>
        <item>Algeria</item>
        <item>Andorra</item>
        <item>Angola</item>
        <item>Antigua and Barbuda</item>
        <item>Argentina</item>
        <item>Armenia</item>
        <item>Aruba</item>
        <item>Australia</item>
        <item>Austria</item>
        <item>Azerbaijan</item>
        <item>Bahamas</item>
        <item>Bahrain</item>
        <item>Bangladesh</item>
        <item>Barbados</item>
        <item>Belarus</item>
        <item>Belgium</item>
        <item>Belize</item>
        <item>Benin</item>
        <item>Bermuda</item>
        <item>Bhutan</item>
        <item>Bolivia</item>
        <item>Bosnia and Herzegovina</item>
        <item>Botswana</item>
        <item>Brazil</item>
        <item>British Virgin Islands</item>
        <item>Brunei</item>
        <item>Bulgaria</item>
        <item>Burkina Faso</item>
        <item>Burundi</item>
        <item>Cambodia</item>
        <item>Cameroon</item>
        <item>Canada</item>
        <item>Canary Islands</item>
        <item>Cape Verde</item>
        <item>Cayman Islands</item>
        <item>Central African Republic</item>
        <item>Ceuta and Melilla</item>
        <item>Chad</item>
        <item>Chile</item>
        <item>China</item>
        <item>Colombia</item>
        <item>Comoros</item>
        <item>Congo</item>
        <item>Costa Rica</item>
        <item>Croatia</item>
        <item>Cuba</item>
        <item>Curaçao</item>
        <item>Cyprus</item>
        <item>Czech Republic</item>
        <item>Côte d’Ivoire</item>
        <item>Denmark</item>
        <item>Djibouti</item>
        <item>Dominica</item>
        <item>Dominican Republic</item>
        <item>Ecuador</item>
        <item>Egypt</item>
        <item>El Salvador</item>
        <item>Equatorial Guinea</item>
        <item>Eritrea</item>
        <item>Estonia</item>
        <item>Ethiopia</item>
        <item>Faroe Islands</item>
        <item>Fiji</item>
        <item>Finland</item>
        <item>France</item>
        <item>French Guiana</item>
        <item>French Polynesia</item>
        <item>Gabon</item>
        <item>Gambia</item>
        <item>Georgia</item>
        <item>Germany</item>
        <item>Ghana</item>
        <item>Greece</item>
        <item>Greenland</item>
        <item>Grenada</item>
        <item>Guadeloupe</item>
        <item>Guam</item>
        <item>Guatemala</item>
        <item>Guernsey</item>
        <item>Guinea</item>
        <item>Guinea-Bissau</item>
        <item>Guyana</item>
        <item>Haiti</item>
        <item>Honduras</item>
        <item>Hong Kong</item>
        <item>Hungary</item>
        <item>Iceland</item>
        <item>India</item>
        <item>Indonesia</item>
        <item>Iran</item>
        <item>Iraq</item>
        <item>Ireland</item>
        <item>Isle of Man</item>
        <item>Israel</item>
        <item>Italy</item>
        <item>Jamaica</item>
        <item>Japan</item>
        <item>Jersey</item>
        <item>Jordan</item>
        <item>Kazakhstan</item>
        <item>Kenya</item>
        <item>Kiribati</item>
        <item>Kuwait</item>
        <item>Kyrgyzstan</item>
        <item>Laos</item>
        <item>Latin America</item>
        <item>Latvia</item>
        <item>Lebanon</item>
        <item>Lesotho</item>
        <item>Liberia</item>
        <item>Libya</item>
        <item>Liechtenstein</item>
        <item>Lithuania</item>
        <item>Luxembourg</item>
        <item>Macau</item>
        <item>Macedonia</item>
        <item>Madagascar</item>
        <item>Malawi</item>
        <item>Malaysia</item>
        <item>Mali</item>
        <item>Malta</item>
        <item>Marshall Islands</item>
        <item>Martinique</item>
        <item>Mauritania</item>
        <item>Mauritius</item>
        <item>Mayotte</item>
        <item>Mexico</item>
        <item>Micronesia</item>
        <item>Moldova</item>
        <item>Monaco</item>
        <item>Mongolia</item>
        <item>Montenegro</item>
        <item>Morocco</item>
        <item>Mozambique</item>
        <item>Myanmar</item>
        <item>Namibia</item>
        <item>Nepal</item>
        <item>Netherlands</item>
        <item>New Caledonia</item>
        <item>New Zealand</item>
        <item>Nicaragua</item>
        <item>Niger</item>
        <item>Nigeria</item>
        <item>North Korea</item>
        <item>Northern Mariana Islands</item>
        <item>Norway</item>
        <item>Oman</item>
        <item>Pakistan</item>
        <item>Palau</item>
        <item>Palestine</item>
        <item>Panama</item>
        <item>Papua New Guinea</item>
        <item>Paraguay</item>
        <item>Peru</item>
        <item>Philippines</item>
        <item>Poland</item>
        <item>Portugal</item>
        <item>Puerto Rico</item>
        <item>Qatar</item>
        <item>Romania</item>
        <item>Russia</item>
        <item>Rwanda</item>
        <item>Réunion</item>
        <item>Saint Barthélemy</item>
        <item>Saint Kitts and Nevis</item>
        <item>Saint Lucia</item>
        <item>Saint Martin</item>
        <item>Saint Vincent and the Grenadines</item>
        <item>Samoa</item>
        <item>San Marino</item>
        <item>Saudi Arabia</item>
        <item>Senegal</item>
        <item>Serbia</item>
        <item>Seychelles</item>
        <item>Sierra Leone</item>
        <item>Singapore</item>
        <item>Sint Maarten</item>
        <item>Slovakia</item>
        <item>Slovenia</item>
        <item>Solomon Islands</item>
        <item>Somalia</item>
        <item>South Africa</item>
        <item>South Korea</item>
        <item>South Sudan</item>
        <item>Spain</item>
        <item>Sri Lanka</item>
        <item>Sudan</item>
        <item>Suriname</item>
        <item>Swaziland</item>
        <item>Sweden</item>
        <item>Switzerland</item>
        <item>Syria</item>
        <item>São Tomé and Príncipe</item>
        <item>Taiwan</item>
        <item>Tanzania</item>
        <item>Thailand</item>
        <item>Timor-Leste</item>
        <item>Togo</item>
        <item>Tonga</item>
        <item>Trinidad and Tobago</item>
        <item>Tunisia</item>
        <item>Turkey</item>
        <item>Turks and Caicos Islands</item>
        <item>U.S. Outlying Islands</item>
        <item>U.S. Virgin Islands</item>
        <item>Uganda</item>
        <item>Ukraine</item>
        <item>United Arab Emirates</item>
        <item>United Kingdom</item>
        <item>United States</item>
        <item>Uruguay</item>
        <item>Uzbekistan</item>
        <item>Vanuatu</item>
        <item>Venezuela</item>
        <item>Vietnam</item>
        <item>Western Sahara</item>
        <item>Yemen</item>
        <item>Zambia</item>
        <item>Zimbabwe</item>
        <item>Åland Islands</item>
    </string-array>
    <string name="guest">Guest</string>
    <string name="loggedAs">You are logged as a guest. \n This feature is not available for guest users. \n\n You can log out and login as a registered user.</string>
    <string name="quoting">Quoting comment:</string>
    <string name="newComment">Write a comment</string>
    <string name="send">Send</string>
    <string name="ccTitle">Currency Converter</string>
    <string name="ccFrom">From:</string>
    <string name="ccTo">To:</string>
    <string name="ccConvertText">Write Amount to Convert</string>
    <string name="ccResult">Result</string>
    <string name="convert">Convert</string>
    <string name="textDevelopedBy">This application has been developed by a group of students of the Computer Engineering degree from the Universitat Politècnica de Catalunya (UPC) and more specifically from the Facultat d\'Informàtica de Barcelona (FIB).</string>
    <string name="textSubject">BeCitizeN is a project for the subject Projecte d’Enginyeria del Software.</string>
    <string name="textPurpose">Its main purpose is to provide useful information to new citizens of Barcelona.</string>
    <string name="information">Information</string>
    <string name="faq">FAQ</string>
    <string name="utilities">Utilities</string>
    <string name="social">Social</string>
    <string name="private_messages">Private messages</string>
    <string name="forum">Forum</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="other">Other</string>
    <string name="tab_text_6">Utilities</string>
    <string name="helpUtilities_1">You can accede the utilities by its icon in your side menu.</string>
    <string name="helpUtilities_2">In this part of the application you have 3 different functionalities:</string>
    <string name="helpUtilities_3">Currency converter</string>
    <string name="helpUtilities_4">You can select the currency you want to convert and the currency to which you want it. The conversion among all currencies is actualized twice a day.</string>
    <string name="helpUtilities_5">Translator</string>
    <string name="helpUtilities_6">With this functionality you can introduce a text in any language and translate it to any other.</string>
    <string name="helpUtilities_7">Word of the day</string>
    <string name="helpUtilities_8">In this screen every day will appear a new word in Catalan with its meaning, in your selected language. This functionality is possible thanks to rodamots.cat.</string>
    <string name="changePassword">Change your password</string>
    <string name="writePass">Write your current password</string>
    <string name="writeNewPass">Enter your new password</string>
    <string name="repeatNewPassword">Confirm your new password</string>
    <string name="resetExplanation">If you reset your password, you will receive a new one in your email.</string>
    <string name="resetPassword">Reset password</string>
</resources>