<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.becitizen.app.becitizen.presentation.AboutActivity"
    android:padding="20dp">

    <TextView
        android:id="@+id/tvAbout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about"
        android:textSize="30sp"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_marginBottom="20dp"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/tvDevelopedBy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvAbout"
        android:layout_marginBottom="15dp"
        android:layout_gravity="center_vertical|end"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:text="@string/textDevelopedBy"/>

    <TextView
        android:id="@+id/tvSubject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvDevelopedBy"
        android:layout_marginBottom="15dp"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:text="@string/textSubject"/>

    <TextView
        android:id="@+id/tvPurpose"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvSubject"
        android:layout_marginBottom="15dp"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:text="@string/textPurpose"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvPurpose"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        app:srcCompat="@drawable/bcn_icon_dark" />

</RelativeLayout>
