<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.user.ChangePasswordActivity">

    <TextView
        android:id="@+id/changePasswordTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        style="@style/mainTitleLayout"
        android:text="@string/changePassword"

        />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/oldPasswordTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/changePasswordTitle"
        android:layout_alignStart="@+id/changePasswordTitle"
        android:layout_below="@+id/changePasswordTitle"
        android:layout_marginTop="20dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/oldPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/writePass"
            android:inputType="textPassword"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/newPasswordTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/changePasswordTitle"
        android:layout_alignStart="@+id/changePasswordTitle"
        android:layout_below="@+id/oldPasswordTitle"
        android:layout_marginTop="20dp"
        >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/newPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/writeNewPass"
            android:inputType="textPassword"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/reNewPasswordTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/changePasswordTitle"
        android:layout_alignStart="@+id/changePasswordTitle"
        android:layout_below="@+id/newPasswordTitle"
        android:layout_marginTop="20dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/reNewPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/repeatNewPassword"
            android:inputType="textPassword"
            />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/newPasswordButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/changePasswordTitle"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/changePasswordTitle"
        android:layout_marginBottom="20dp"
        android:text="@string/send"
        android:textSize="18sp"/>

</RelativeLayout>
