<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.becitizen.app.becitizen.presentation.HelpActivity$PlaceholderFragment">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_margin="20dp"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:gravity="center"
        android:text="@string/tab_text_6"/>

    <ScrollView
        android:id="@+id/scrollHelp7"
        android:layout_below="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img1"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:layout_marginStart="20dp"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"
                app:srcCompat="@drawable/ic_menu_utilities" />

            <TextView
                android:id="@+id/text1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_alignTop="@+id/img1"
                android:layout_toEndOf="@+id/img1"
                android:text="@string/helpUtilities_1"
                android:textSize="17sp"
                android:textColor="@android:color/black"/>

            <TextView
                android:id="@+id/text12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/text1"
                android:layout_alignEnd="@+id/text1"
                android:layout_below="@+id/text1"
                android:text="@string/helpUtilities_2"
                android:textSize="17sp"
                android:textColor="@android:color/black"/>

            <ImageView
                android:id="@+id/img2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/img1"
                android:layout_alignEnd="@+id/img1"
                android:layout_below="@+id/text12"
                android:layout_marginTop="20dp"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"
                app:srcCompat="@drawable/currencyconverter"/>

            <TextView
                android:id="@+id/text2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_alignTop="@+id/img2"
                android:layout_toEndOf="@+id/img2"
                android:text="@string/helpUtilities_3"
                android:textSize="17sp"
                android:textColor="@android:color/black"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/text22"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/text2"
                android:layout_alignEnd="@+id/text2"
                android:layout_below="@+id/text2"
                android:text="@string/helpUtilities_4"
                android:textSize="17sp"
                android:textColor="@android:color/black"/>

            <ImageView
                android:id="@+id/img3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/img2"
                android:layout_alignEnd="@+id/img2"
                android:layout_below="@+id/text22"
                android:layout_marginTop="20dp"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"
                app:srcCompat="@drawable/translator"/>

            <TextView
                android:id="@+id/text3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_alignTop="@+id/img3"
                android:layout_toEndOf="@+id/img3"
                android:text="@string/helpUtilities_5"
                android:textSize="17sp"
                android:textColor="@android:color/black"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/text32"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/text3"
                android:layout_alignEnd="@+id/text3"
                android:layout_below="@+id/text3"
                android:text="@string/helpUtilities_6"
                android:textSize="17sp"
                android:textColor="@android:color/black"/>

            <ImageView
                android:id="@+id/img4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/img3"
                android:layout_alignEnd="@+id/img3"
                android:layout_below="@+id/text32"
                android:layout_marginTop="20dp"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"
                app:srcCompat="@drawable/word_icon"/>

            <TextView
                android:id="@+id/text4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_alignTop="@+id/img4"
                android:layout_toEndOf="@+id/img4"
                android:text="@string/helpUtilities_7"
                android:textSize="17sp"
                android:textColor="@android:color/black"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/text42"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_alignStart="@+id/text4"
                android:layout_alignEnd="@+id/text4"
                android:layout_below="@+id/text4"
                android:text="@string/helpUtilities_8"
                android:textSize="17sp"
                android:textColor="@android:color/black"/>

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>