<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.CurrencyConverterActivity">

    <TextView
        android:id="@+id/ccTitleText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/ccTitle"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:layout_marginTop="26dp"
        android:textSize="30sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/llconverter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ccTitleText"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:baselineAligned="true"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_marginEnd="7dp">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ccFrom"
                    android:textSize="24sp" />

                <Spinner
                    android:id="@+id/spinnerFrom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/currencies" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_marginStart="7dp">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ccTo"
                    android:textSize="24sp" />

                <Spinner
                    android:id="@+id/spinnerTo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/currencies" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editTextAmount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/ccConvertText"
                android:inputType="numberDecimal"
                android:textSize="24sp" />

        </LinearLayout>

    </LinearLayout>



    <TextView
        android:id="@+id/textViewResultado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/llconverter"
        android:layout_marginTop="30dp"
        android:text="@string/ccResult"
        android:textAlignment="center"
        android:textColor="@android:color/holo_green_dark"
        android:layout_alignStart="@id/llconverter"
        android:layout_alignEnd="@id/llconverter"
        android:textSize="42sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/convertButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewResultado"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="20dp"
        android:elevation="0dp"
        android:text="@string/convert"
        android:textStyle="bold"
        android:layout_alignStart="@id/llconverter"
        android:layout_alignEnd="@id/llconverter"/>


</RelativeLayout>